chore: send one EOF response only for reduce stream (#102)
Signed-off-by: Keran Yang <yangkr920208@gmail.com>